fix: received move list out of bounds

--- a/frontend/src/components/ChessGameView.css
+++ b/frontend/src/components/ChessGameView.css
@@ -15,17 +15,18 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 400px;
+    top: 450px;
     left: 3%;
     right: 10%;
     width: 87%;
-    max-width: 200px;
-    height: 40vh;
+    max-width: 100px;
     margin-top: 5vh;
     margin-bottom: 20px;
-    padding: 1.5%;
+    padding: 1.2%;
     border: 1px solid #c0bdbb;
     border-radius: 20px;
+    height: 40vh;
+    max-height: 40vh;
 }
 
 #chessboard-container {
