--- a/frontend/src/components/JustInTimeMoveList.css
+++ b/frontend/src/components/JustInTimeMoveList.css
@@ -1,5 +1,5 @@
 #move-list {
     overflow-y: auto;
     height: 100%;
-    max-height: 400px;
+    max-height: 30vh;
 }
